update the buttons

--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
         </button>
       </div>
     </div>
-
     <!-- Course Outline -->
     <div class="course-outline" id="courseOutline">
       <h1>Course Outline</h1>
@@ -322,7 +321,7 @@
       <div class="footer-col">
         <h3>Contact<span class="footer-underline"></span></h3>
         <div class="footer-contact">
-          <a href="mailto:contact@autolearn.ph" class="footer-social-link mail" aria-label="Email">
+          <a href="mail:bagionjamesson23@gmail.com" class="footer-social-link mail" aria-label="Email">
             <svg class="footer-icon" width="20" height="20" fill="#FFD600" viewBox="0 0 24 24"><path d="M20 4H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 2v.01L12 13 4 6.01V6h16zM4 20v-9.99l7.99 7.99c.39.39 1.02.39 1.41 0L20 10.01V20H4z"/></svg>
           </a>
           bagionjamesson23@gmail.com
@@ -334,7 +333,7 @@
           +63 912 345 6789
         </div>
         <div class="footer-contact">
-          <a href="https://goo.gl/maps/xyz" target="_blank" class="footer-social-link location" aria-label="Location">
+          <a href="https://maps.app.goo.gl/fBzZYt9EEEPbk71M6" target="_blank" class="footer-social-link location" aria-label="Location">
             <svg class="footer-icon" width="20" height="20" fill="#FFD600" viewBox="0 0 24 24"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
           </a>
           Valenzuela City, Philippines
