updaate last update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="intro-section">
       <div class="intro-content">
         <h1 id="introTitle"></h1>
-        <h1>Automotive Electrical Systems and Service</h1>
+        <h1>⚡Auto Electrical System</h1>
         <p>
           This course is designed to provide you with the essential knowledge and skills required for working with automotive electrical systems, including understanding how electrical components function and how to perform safe and effective diagnostics, service, and repairs.
         </p>
@@ -260,7 +260,7 @@
           <button class="take-test-btn">Take the Exam</button>
         </div>
 
-         <div class="evaluation-slot" id="course-eval-item" data-gform-src="https://forms.gle/rEmfBDVUC7wMe4xS9">
+         <div class="evaluation-slot" id="course-eval-item" data-gform-src="https://forms.gle/Wtw7tLV8cqXwVfZo7">
           <span class="test-title">Go to Course Evaluation and Get Certificate</span>
           <button class="go-btn" id="goToCourseEvalBtn">Go</button>
           
