update the header of course outline

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <div class="course-outline" id="courseOutline">
       <h1>Course Outline</h1>
       <div class="course-sidebar">
-        <h3 class="unit-title"> AUTOMOTIVE SERVICING</h3>
+        <h3 class="unit-title"> AUTO ELECTRICAL SYSTEM</h3>
         <div class="unit-subtitle" data-unit-intro-id="unit1-intro">UNIT 1: ELECTRICAL FUNDAMENTALS</div>
         <div class="test-item test-highlight" id="unit1-pretest-item" data-gform-src="https://forms.gle/nqFxfnHqNviBeh1m7">
           <span class="test-title">Pre-Test</span>
